--- a/css/style.css
+++ b/css/style.css
@@ -33,7 +33,9 @@ body {
   width: 594px;
   margin: auto;
 }
-
+.primary-color {
+  color: #e55473;
+}
 /* Header Part CSS */
 
 .banner-container {
@@ -97,6 +99,9 @@ body {
   text-align: center;
   width: 300px;
 }
+.box-2-img {
+  margin-bottom: 45px;
+}
 .featured-box {
   text-align: center;
 }
@@ -106,4 +111,51 @@ body {
   font-weight: 700;
   margin-top: 10px;
   text-decoration-line: underline;
+}
+
+/* Featured bottom CSS */
+.featured-bottom-container {
+  display: flex;
+  justify-content: space-evenly;
+  background-color: rgba(39, 39, 39, 0.05);
+  width: 1240px;
+  margin: auto;
+  text-align: center;
+  padding: 40px 0;
+}
+.featured-bottom-container h5 {
+  margin-top: 10px;
+  font-size: 18px;
+}
+
+/* Discount part CSs */
+.discount-container {
+  display: flex;
+  background-color: rgba(229, 84, 115, 0.05);
+  height: 500px;
+  justify-content: space-evenly;
+  align-items: center;
+  margin-top: 100px;
+}
+.discount-left-part {
+  text-align: center;
+}
+.discount-heading {
+  color: #272727;
+  font-size: 30px;
+  font-weight: 800;
+  margin-bottom: 20px;
+}
+.discount-info {
+  color: rgba(39, 39, 39, 0.6);
+  font-size: 15px;
+  font-weight: 400;
+  width: 65%;
+  margin: auto;
+}
+.discount-img {
+  width: 300px;
+}
+.discount-btn {
+  margin-top: 20px;
 }
