--- a/css/style.css
+++ b/css/style.css
@@ -36,6 +36,7 @@ body {
 .primary-color {
   color: #e55473;
 }
+
 /* Header Part CSS */
 
 .banner-container {
@@ -66,6 +67,7 @@ body {
 .banner-img {
   width: 500px;
 }
+
 /* featured part CSS */
 
 .featured-container {
@@ -114,6 +116,7 @@ body {
 }
 
 /* Featured bottom CSS */
+
 .featured-bottom-container {
   display: flex;
   justify-content: space-evenly;
@@ -129,6 +132,7 @@ body {
 }
 
 /* Discount part CSs */
+
 .discount-container {
   display: flex;
   background-color: rgba(229, 84, 115, 0.05);
@@ -158,4 +162,59 @@ body {
 }
 .discount-btn {
   margin-top: 20px;
+}
+
+/* Slider part CSS */
+
+.slider-part {
+  margin-top: 50px;
+}
+.slider-container {
+  display: flex;
+  gap: 10px;
+  justify-content: center;
+  height: 400px;
+  margin-bottom: 60px;
+}
+.layout-img {
+  width: 300px;
+}
+
+/* Contact part CSS */
+.contact-container {
+  width: 1233px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 300px;
+  background-image: url('../images/Rectangle\ 9.png');
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  text-align: center;
+  margin: auto;
+}
+
+.contact-input {
+  padding: 20px 300px 20px 10px;
+  margin-right: 10px;
+  border: 0;
+}
+
+/* Footer part CSS */
+
+.footer-container {
+  background-color: #111010;
+  text-align: center;
+  padding: 50px 0px;
+  margin-top: 80px;
+}
+.contact-info {
+  color: rgba(255, 255, 255, 0.9) !important;
+}
+.contact-heading {
+  color: #fff !important;
+}
+.copyright {
+  color: rgba(255, 255, 255, 0.4);
 }
